# xRay

./: .pnp.cjs  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  package-lock.json  package.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  publish.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/CompareModal/: index.jsx
src/components/FilterBar/: index.jsx
src/components/LogItem/: CompareModal.jsx  Message.jsx  TraceModal.jsx  index.jsx
src/components/LogList/: CompareModal.jsx  EmptyState.jsx  index.jsx
src/components/Sidebar/: index.jsx
src/components/StatusBar/: index.jsx
src/constants/: index.js
src/context/: LogContext.jsx
src/db/: index.js  indexedDB.js  xrayDb.js
src/hooks/: index.js  useBookmarks.js  useLogFilter.js  useLogSelection.js  useServerStatus.js
src/services/: api.js
src/styles/: index.css
src/utils/: formatters.js
