[package]
name = "xRay"
version = "0.1.0"
description = "A modern, high-performance log management and comparison application"
authors = ["XRay Team"]
license = "MIT"
repository = "https://github.com/XRay-Log/xRay"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = [] }
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
log = "0.4.20"
axum = "0.7.2"
tower-http = { version = "0.5.0", features = ["cors"] }
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
